[package]
name = "serde-error"
version = "0.1.1"
authors = ["Léo Gaspard <leo@gaspard.io>"]
license = "MIT"
categories = ["development-tools", "development-tools::debugging"]
keywords = ["error", "failure", "serde", "anyhow"]
description = "Serde (de)serializer for Error types"
readme = "README.md"
repository = "https://github.com/Ekleog/serde-error"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
anyhow = "1.0"
bincode = "1.3"
